[project]
name = "not-a-bot"
requires-python = "~=3.13.0"
version = "1.0.0"
description = ""
authors = [{ name = "s0hv", email =  "s0hvaperuna@gachimuchi.men" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "aiohttp[speedups]~=3.13.3",
    "redis~=6.2.0",
    "ansicolors~=1.1.8",
    "asyncpg ~= 0.30.0",
    "beautifulsoup4 ~= 4.8.0",
    "colormath ~= 3.0.0",
    "colorthief ~= 0.2.1",
    "colour ~= 0.1.5",
    "emoji ~= 2.14.1",
    "isodate ~= 0.6.0",
    "gtts ~= 2.0.4",
    "google-api-python-client == 2.185.0",
    "lxml ~= 5.4.0",
    "matplotlib == 3.10.3",
    "numpy ~= 1.26.4",
    "pillow==11.3.0",
    "psutil ~= 5.7.2",
    "python-magic==0.4.18",
    "python-magic-bin==0.4.14; sys_platform == 'win32'",
    "pytz==2025.2",
    "sanic~=25.3.0",
    "selenium ~= 3.141.0",
    "validators ~= 0.35.0",
    "yt-dlp[default]",
    "disnake[speed,voice]~=2.11.0",
    "tatsu.py~=1.0.4",
    "geopatterns",
]

[tool.uv]
required-version = "~=0.9.6"

[tool.uv.sources]
geopatterns = { git = "https://github.com/cristobalcl/geopatterns.git" }
